--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <ul id="messages"></ul>
-    <script src="https://unpkg.com/ipfs@0.32.2/dist/index.js"></script>
-    <script src="dist/bundle.js"></script>
+    <script src="https://unpkg.com/ipfs@0.32.2/dist/index.js" type="text/javascript"></script>
+    <script src="dist/bundle.js" type="text/javascript"></script>
 </body>
 </html>
