--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no" />
+    <title>Sets the Game</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-    <ul id="messages"></ul>
-    <script src="https://unpkg.com/ipfs@0.32.2/dist/index.js" type="text/javascript"></script>
-    <script src="dist/bundle.js" type="text/javascript"></script>
+    <div id="app"></div>
+
+    <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/@material-ui/core@3.3.2/umd/material-ui.production.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/p2p-lobby/dist/bundle.min.js" crossorigin="anonymous"></script>
+    <script src="dist/bundle.min.js" type="text/javascript"></script>
 </body>
 </html>
