--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
-    <script src="https://unpkg.com/@material-ui/core@3.3.2/umd/material-ui.production.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/@material-ui/core@3.3.2/umd/material-ui.production.min.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/p2p-lobby/dist/bundle.min.js" crossorigin="anonymous"></script>
     <script src="dist/umd/bundle.min.js" type="text/javascript"></script>
 </body>
