--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <script src="https://unpkg.com/react-dom@16.6.1/umd/react-dom.production.min.js" type="text/javascript"></script>
     <script src="https://unpkg.com/@material-ui/core@3.3.2/umd/material-ui.production.min.js" type="text/javascript"></script>
     <script src="https://unpkg.com/p2p-lobby/dist/bundle.min.js" type="text/javascript"></script>
-    <script src="js/app.bundle.js" type="text/javascript"></script>
+    <script src="app.js" type="text/javascript"></script>
   </body>
 </html>
